--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>[19.0, 23.0]</version>
+            <version>23.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>org.hdrhistogram</groupId>
             <artifactId>HdrHistogram</artifactId>
-            <version>[2.1.9, 2.2)</version>
+            <version>2.1.10</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
