--- a/essem-protoc3/pom.xml
+++ b/essem-protoc3/pom.xml
@@ -63,7 +63,6 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>3.6.1</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
@@ -90,6 +89,26 @@
                     <target>1.8</target>
                     <fork>true</fork>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <show>protected</show>
+                    <nohelp>true</nohelp>
+                    <sourceFileExcludes>
+                        <sourceFileExclude>**/org/attribyte/essem/ReportProtos.java</sourceFileExclude>
+                    </sourceFileExcludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
