--- a/essem-reporter-protoc2/pom.xml
+++ b/essem-reporter-protoc2/pom.xml
@@ -36,9 +36,9 @@
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>2.6.1</version>
+            <groupId>org.attribyte</groupId>
+            <artifactId>essem-reporter-base</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -71,6 +71,26 @@
                     <target>1.8</target>
                     <fork>true</fork>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <show>protected</show>
+                    <nohelp>true</nohelp>
+                    <sourceFileExcludes>
+                        <sourceFileExclude>**/org/attribyte/essem/ReportProtos.java</sourceFileExclude>
+                    </sourceFileExcludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
