--- a/essem-protoc2/pom.xml
+++ b/essem-protoc2/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>2.6.1</version>
+            <version>[2.6.1]</version>
         </dependency>
     </dependencies>
     <build>
