--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <repositories>
+    <distributionManagement>
         <repository>
-            <id>snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>interval:60</updatePolicy>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
+            <id>github-attribyte</id>
+            <name>GitHub Attribyte Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/attribyte/private-repo</url>
         </repository>
-    </repositories>
+    </distributionManagement>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.attribyte</groupId>
     <artifactId>essem-reporter</artifactId>
