--- a/essem-metrics/pom.xml
+++ b/essem-metrics/pom.xml
@@ -2,19 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <distributionManagement>
-        <repository>
-            <id>github-attribyte</id>
-            <name>GitHub Attribyte Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/attribyte/private-repo</url>
-        </repository>
-    </distributionManagement>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.attribyte</groupId>
     <artifactId>essem-metrics</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Essem Custom Metrics</name>
+    <parent>
+        <artifactId>essem-reporter</artifactId>
+        <groupId>org.attribyte</groupId>
+        <version>1.1.0-SNAPSHOT</version>
+    </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
