--- a/essem-protoc2/pom.xml
+++ b/essem-protoc2/pom.xml
@@ -3,15 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.attribyte</groupId>
     <artifactId>essem-protoc2</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Essem protobuf model for protoc2</name>
     <parent>
         <artifactId>essem-reporter</artifactId>
         <groupId>org.attribyte</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
