--- a/essem-reporter-base/pom.xml
+++ b/essem-reporter-base/pom.xml
@@ -2,16 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <repositories>
+        <repository>
+            <id>attribyte-private-repo</id>
+            <name>Attribyte Private Repo</name>
+            <url>https://maven.pkg.github.com/attribyte/private-repo/</url>
+        </repository>
+    </repositories>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.attribyte</groupId>
     <artifactId>essem-reporter-base</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Essem protobuf model base</name>
     <parent>
         <artifactId>essem-reporter</artifactId>
         <groupId>org.attribyte</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
