--- a/essem-protoc3/pom.xml
+++ b/essem-protoc3/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <artifactId>essem-reporter</artifactId>
         <groupId>org.attribyte</groupId>
-        <version>1.1.1</version>
+        <version>1.1.2</version>
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>[3.6.1]</version>
+            <version>[3.6.1,)</version>
         </dependency>
     </dependencies>
     <build>
